<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_manager_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pinInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pin"
            android:inputType="numberPassword"
            android:maxLength="6" />

        <EditText
            android:id="@+id/pinConfirmInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pin_confirm"
            android:inputType="numberPassword"
            android:maxLength="6" />

        <RadioGroup
            android:id="@+id/roleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <RadioButton
                android:id="@+id/managerRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role_manager" />

            <RadioButton
                android:id="@+id/sellerRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checked="true"
                android:text="@string/role_seller" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
